<resources>
    <string name="app_name">AndroidTest</string>
    <string name="mAddress">Вавилова, 23</string>
    <string name="extra_office">Доп.офис №9380/0138</string>
    <string name="mDistance">12 км.</string>
    <string name="phone_number">+7 (800) 555-55-00</string>
    <string name="information_text">Telephone for queries</string>
    <string name="quality_estimation">Feedback</string>
    <string name="progress_bar_inscription">Please wait, list of banks is downloading now ...</string>
    <string name="detailed_info_empty">Click on a needed bank to see its details.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_read">Read from this app</string>
    <string name="app_write">Write to this app</string>
</resources>
