<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secondTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.vladislav.androidtest.BankOfficeDetailedInfo.DetailedInfoActivity">

    <RelativeLayout
        android:id="@+id/directions"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detailed_info_header_height"
        android:background="@color/colorAccent"
        android:backgroundTint="@android:color/holo_green_dark">

        <LinearLayout
            android:id="@+id/addressOffice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/detailed_info_address_margin_right"
            android:layout_marginTop="@dimen/address_text_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mAddress"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/address_text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/extra_office_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_office"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/directionDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/verticalLine_image_view"
                android:layout_width="@dimen/divider_thickness"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/divider_margin"
                android:layout_marginTop="@dimen/divider_margin"
                android:background="@android:color/background_light" />

            <ImageView
                android:id="@+id/turn_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/house_left_margin"
                android:background="@drawable/ic_subdirectory_arrow_right_black_24dp"
                android:backgroundTint="@android:color/background_light" />

            <TextView
                android:id="@+id/distance_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/verticalLine_image_view"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/house_left_margin"
                android:gravity="center"
                android:text="@string/mDistance"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/distance_text_size" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detailed_info_images_margin"
            app:srcCompat="@drawable/ic_mood_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Состояние"
                android:textSize="@dimen/office_working_or_not_state_text_size" />

            <TextView
                android:id="@+id/operating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Работает"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:color/darker_gray"
        android:id="@+id/divider_image_view" />

    <LinearLayout
        android:id="@+id/schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detailed_info_images_margin"
            app:srcCompat="@drawable/ic_query_builder_black_24dp"
            android:layout_weight="0"/>

        <LinearLayout
            android:id="@+id/weekDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="9">

            <TextView
                android:id="@+id/monday_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Понедельник"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/tuesday_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Вторник"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/wednesday_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Среда"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/thursday_text_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Четверг"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/friday_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Пятница"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/saturday_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Суббота"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/sunday_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Воскресенье"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hoursPerDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/monday_hours_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10.00-19.00"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/tuesday_hours_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10.00-19.00"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/wednesday_hours_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10.00-19.00"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/thursday_hours_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10.00-19.00"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/friday_hours_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10.00-19.00"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/saturday_hours_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Закрыто"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

            <TextView
                android:id="@+id/sunday_hours_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Закрыто"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/week_days_margin" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/info_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detailed_info_images_margin"
            app:srcCompat="@drawable/ic_info_outline_black_24dp"
            android:layout_weight="0"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information_text"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/telephoneN_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/phoneSet"
            android:layout_width="@dimen/phoneset_size"
            android:layout_height="@dimen/phoneset_size"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            app:srcCompat="@drawable/ic_phone_black_24dp"
            android:tint="@color/colorPrimary" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:color/darker_gray" />

    <Button
        android:id="@+id/qualityEstimation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quality_estimation" />

</LinearLayout>
